--- a/index.html
+++ b/index.html
@@ -412,6 +412,32 @@
               <i class="ri-external-link-line"></i>
             </a>
           </div>
+
+          <div class="portfolio__project">
+            <div class="portfolio__overlay"></div>
+            <img
+              src="assets/img/Todolist Project.png"
+              alt="App Re-design"
+              class="portfolio__img"
+            />
+            <div class="portfolio__info">
+              <div class="portfolio__info-wrapper">
+                <h3 class="portfolio__title">TodoList App</h3>
+                <p class="portfolio__description">
+                  aplikasi yang bertujuan untuk membantu pengguna dalam
+                  mengorganisir dan mengatur tugas atau aktivitas sehari-hari,
+                  aplikasi ini menggunakan Reactjs.
+                </p>
+              </div>
+            </div>
+            <a
+              href="https://to-do-list-app-sigma.vercel.app/"
+              target="_blank"
+              class="portfolio__link"
+            >
+              <i class="ri-external-link-line"></i>
+            </a>
+          </div>
         </div>
       </section>
 
@@ -545,8 +571,9 @@
       </div>
       <div class="footer__copyright container">
         <p>
-          &copy; Copyright 2023 <a href="index.html"><span>卂乙山丨尺 卂乙卄卂尺丨 山乇乃.</span></a> All
-          Rights Reserved
+          &copy; Copyright 2023
+          <a href="index.html"><span>卂乙山丨尺 卂乙卄卂尺丨 山乇乃.</span></a>
+          All Rights Reserved
         </p>
       </div>
     </footer>
