--- a/index.html
+++ b/index.html
@@ -438,6 +438,32 @@
               <i class="ri-external-link-line"></i>
             </a>
           </div>
+
+          <div class="portfolio__project">
+            <div class="portfolio__overlay"></div>
+            <img
+              src="assets/img/Piano Web Project.png"
+              alt="App Re-design"
+              class="portfolio__img"
+            />
+            <div class="portfolio__info">
+              <div class="portfolio__info-wrapper">
+                <h3 class="portfolio__title">Piano Web</h3>
+                <p class="portfolio__description">
+                  Web sederhana untuk memainkan piano, di sini not suara sama
+                  seperti aslinya dan untuk bahasa pemrogramannya memakai
+                  Javascript.
+                </p>
+              </div>
+            </div>
+            <a
+              href="https://piano-web.vercel.app/"
+              target="_blank"
+              class="portfolio__link"
+            >
+              <i class="ri-external-link-line"></i>
+            </a>
+          </div>
         </div>
       </section>
 
