--- a/index.html
+++ b/index.html
@@ -422,16 +422,16 @@
             />
             <div class="portfolio__info">
               <div class="portfolio__info-wrapper">
-                <h3 class="portfolio__title">TodoList App</h3>
+                <h3 class="portfolio__title">TodoList Web</h3>
                 <p class="portfolio__description">
-                  aplikasi yang bertujuan untuk membantu pengguna dalam
-                  mengorganisir dan mengatur tugas atau aktivitas sehari-hari,
-                  aplikasi ini menggunakan Reactjs.
+                  disini pembuatan todolist berguna untuk membantu pengguna
+                  dalam mengorganisir dan mengatur tugas atau aktivitas
+                  sehari-hari, pada web ini memakai Javascript.
                 </p>
               </div>
             </div>
             <a
-              href="https://to-do-list-app-sigma.vercel.app/"
+              href="https://todo-list-web-lime.vercel.app/"
               target="_blank"
               class="portfolio__link"
             >
