--- a/index.html
+++ b/index.html
@@ -416,22 +416,22 @@
           <div class="portfolio__project">
             <div class="portfolio__overlay"></div>
             <img
-              src="assets/img/Todolist Project.png"
+              src="assets/img/Website Education.png"
               alt="App Re-design"
               class="portfolio__img"
             />
             <div class="portfolio__info">
               <div class="portfolio__info-wrapper">
-                <h3 class="portfolio__title">TodoList Web</h3>
+                <h3 class="portfolio__title">Education Web</h3>
                 <p class="portfolio__description">
-                  disini pembuatan todolist berguna untuk membantu pengguna
-                  dalam mengorganisir dan mengatur tugas atau aktivitas
-                  sehari-hari, pada web ini memakai Javascript.
+                  Website Education atau Kelas Belajar Online atau Offline
+                  dengan konsep Multipage, disini memakai Javascript sebagai
+                  pendukung bahasa pemrogramannya.
                 </p>
               </div>
             </div>
             <a
-              href="https://todo-list-web-lime.vercel.app/"
+              href="https://web-education.vercel.app/"
               target="_blank"
               class="portfolio__link"
             >
